# cosmictiger_alpha

./: CMakeLists.txt  README.md  build_cosmic.sh  power.init
cmake/: FindSilo.cmake
cosmictiger/: .cproject  .project  array.hpp  boltzmann.hpp  chemistry.hpp  code_gen.hp  code_gen.hpp  consts.hpp  containers.hpp  cosmos.hpp  cuda.hpp  defs.hpp  direct.hpp  domain.hpp  drift.hpp  driver.hpp  ewald_indices.hpp  expansion.hpp  fast_future.hpp  finite_vector.hpp  fixed.hpp  fourier.hpp  global.hpp  gravity.hpp  green_direct.hpp  green_ewald.hpp  groups.hpp  hpx.hpp  hydro_particle.hpp  initial.hpp  interactions.hpp  interp.hpp  kernel.hpp  kick_return.hpp  lockfree_queue.hpp  managed_vector.hpp  map.hpp  math.hpp  memory.hpp  multipole.hpp  (+30 more)
hpx_lite/hpx/detail/: future_impl.hpp
hpx_lite/src/: thread.cpp
hpxfft/hpxfft/: complex.hpp  cuda.hpp  fourier.hpp  print.hpp
hpxfft/src/: cuda.cu  fourier.cpp  fourier.cu  rockstar.cu
src/: boltzmann.cpp  boltzmann.cu  chemistry.cpp  code_gen.cpp  cosmos.cpp  cuda.cpp  cuda.cu  direct.cpp  direct.cu  domain.cpp  drift.cpp  drift.cu  driver.cpp  ewald_indices.cpp  ewald_indices.cu  expansion.cu  fmm_kernel_codegen.cpp  fourier.cpp  fourier.cu  global.cpp  gravity.cpp  gravity.cu  group_data.cpp  group_data.cu  groups.cpp  groups.cu  hpx.cpp  hpx2mw.cpp  hydro_particle.cpp  initial.cpp  initial.cu  kick_return.cpp  kick_return.cu  main.cpp  map.cpp  map.cu  math.cpp  math.cu  memory.cpp  node_server.cpp  (+32 more)
src/test_problems/rotating_star/: rotating_star.cpp
